--- a/css/index.css
+++ b/css/index.css
@@ -41,7 +41,7 @@ a:active {
 
 header {
 	margin: 0 auto 1rem auto;
-	padding: 1rem 0;
+	padding: 1rem;
 	text-align: center;
 }
 
@@ -181,7 +181,7 @@ footer {
 	color: #424d5c;
 	font-family: 'Rajdhani', sans-serif;
 	margin: 0 auto 1rem auto;
-	padding: 1rem 0;
+	padding: 1rem;
 	text-align: center;
 }
 
@@ -190,8 +190,21 @@ footer {
 		display: block;
 	}
 
+	h1 {
+		font-size: 1.5rem;
+	}
+
+	h2 {
+		font-size: 1rem;
+	}
+
+	textarea {
+		width: 100%;
+	}
+
 	.column {
 		display: block;
+		margin: 0 auto;
 		width: 96%;
 	}
 }
